--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>ntg-logo.png">
-    <title>NTG Technology</title>
+     <title>NTG TECHNOLOGY</title>
+     <meta property="og:url"           content="https://ntgtechnology.web.app" />
+    <meta property="og:type"          content="website" />
+    <meta property="og:title"         content="NTG TECHNOLOGY" />
+    <meta property="og:description"   content="Web development technology training school and web development services." />
+    <meta property="og:image"         content="<%= BASE_URL %>ntg-social-logo.png" />
   </head>
   <body>
     <noscript>
