--- a/public/index.html
+++ b/public/index.html
@@ -5,18 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>ntg-logo.png">
-     <title>New Tech Group - NTG Mawlamyine</title>
+     <title>New Tech Group Mawlamyine</title>
    
      <meta property="og:url"           content="https://ntgtechnology.web.app" />
     <meta property="og:type"          content="website" />
-    <meta property="og:title"         content="New Tech Group - NTG Mawlamyine" />
-    <meta property="og:description"   content="Web development technology training school and web development services." />
-    <meta property="og:image"         content="<%= BASE_URL %>ntg-social-logo.png" />
+    <meta property="og:title"         content="New Tech Group Mawlamyine" />
+    <meta property="og:description"   content="ကွန်ပျုတာ နှင့် နည်းပညာ ပညာရေးဝန်ဆောင်မှု" />
+    <meta property="og:image"         content="ntg_social_logo.png" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Lilita+One&display=swap" rel="stylesheet">
 
   </head>
   <body class="bg-secondary-subtle">
-
-
      <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
